# vibemode-overlay

./: CHANGELOG.md  README.md  pyproject.toml
docs/: AI_INSTALL_PROMPT.md  ARCHITECTURE.md  PRIVACY.md  PUBLISHING.md
src/neurogate_usage_overlay/: __init__.py  browser_reader.py  models.py  overlay.py  parser.py
tests/: test_browser_reader.py  test_overlay.py  test_parser.py
