[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurogate-overlay"
version = "1.2.1"
description = "Small Windows always-on-top overlay for NeuroGate API usage limits."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NeuroGate API contributors" }]
keywords = ["neurogate", "api", "overlay", "usage", "windows", "playwright"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "playwright>=1.44",
]

[project.urls]
Homepage = "https://github.com/RyandavisProject/neurogate-overlay"
Issues = "https://github.com/RyandavisProject/neurogate-overlay/issues"

[project.scripts]
neurogate-overlay = "neurogate_usage_overlay.__main__:main"
neurogate-api = "neurogate_usage_overlay.__main__:main"
vibemode-overlay = "neurogate_usage_overlay.__main__:main"
neurogate-usage-overlay = "neurogate_usage_overlay.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
